@@ -115,11 +115,6 @@
         - as LHS
         - as RHS
         - recursive definition with pointer
-* composite literal {1,2,3...}
-        - parse (initializer)
-        - parse (rhs)
-        * type check
-        * code generation
 - pointer
         - *ptr
         - *ptr = val
