@@ -1,3 +1,9 @@
+Wed Jan  2 03:00:22 2008  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/parser/Parser.jj: composite literal removed.
+
+	* net/loveruby/cflat/ast/CompositeLiteralNode.java: removed.
+
 Wed Jan  2 01:32:12 2008  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/compiler/TypeChecker.java: better error
